DESK-554: Fixing a tiny z-index bug in alerts

--- a/infl-styles/_alert.scss
+++ b/infl-styles/_alert.scss
@@ -33,6 +33,7 @@
     color: $info-color;
     cursor: pointer;
     font-weight: bold;
+    z-index: 3;
 
     &:hover {
       color: darken($info-color, 10%);
